--- a/src/css/App.css
+++ b/src/css/App.css
@@ -145,44 +145,42 @@ progress[value]::-webkit-progress-value {
     height: 36px;
     width: 36px;
     border-radius: 3px;
-    background: var(--primary-color);
+    background: black;
     cursor: pointer;
-    margin-top: -18px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
-    box-shadow: 1px 1px 1px var(--secondary-color), 0px 0px 1px var(--secondary-color); /* Add cool effects to your sliders! */
+    margin-top: -16px;
   }
   
   /* All the same stuff for Firefox */
   input[type=range]::-moz-range-thumb {
-    box-shadow: 1px 1px 1px var(--secondary-color), 0px 0px 1px var(--secondary-color);
     height: 36px;
     width: 36px;
     border-radius: 3px;
-    background: var(--primary-color);
+    background: black;
     cursor: pointer;
+    margin-top: -16px;
   }
   
   /* All the same stuff for IE */
   input[type=range]::-ms-thumb {
-    box-shadow: 1px 1px 1px var(--secondary-color), 0px 0px 1px var(--secondary-color);
     height: 36px;
-    width: 16px;
+    width: 36px;
     border-radius: 3px;
-    background: var(--primary-color);
+    background: black;
     cursor: pointer;
+    margin-top: -16px;
   }
 
   input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 4px;
     cursor: pointer;
-    /* box-shadow: 1px 1px 1px var(--secondary-color), 0px 0px 1px var(--secondary-color);
-    background: var(--secondary-color); */
-    border-radius: 1.3px;
-    border: 0.2px solid var(--secondary-color);
+    background: black;
+    border-radius: 5px;
+    border: 0.2px solid black;
   }
   
   input[type=range]:focus::-webkit-slider-runnable-track {
-    background: var(--secondary-color);
+    background: black;
   }
   
   input[type=range]::-moz-range-track {
@@ -197,7 +195,7 @@ progress[value]::-webkit-progress-value {
   
   input[type=range]::-ms-track {
     width: 100%;
-    height: 4px;
+    height: 3px;
     cursor: pointer;
     background: transparent;
     border-color: transparent;
@@ -205,42 +203,45 @@ progress[value]::-webkit-progress-value {
     color: transparent;
   }
   input[type=range]::-ms-fill-lower {
-    background: var(--secondary-color);
-    border: 0.2px solid var(--secondary-color);
+    background: black;
+    border: 0.2px solid black;
     border-radius: 2.6px;
-    box-shadow: 1px 1px 1px var(--secondary-color), 0px 0px 1px var(--secondary-color);
+    box-shadow: 1px 1px 1px gray, 0px 0px 1px gray;
   }
   input[type=range]:focus::-ms-fill-lower {
-    background: var(--secondary-color);
+    background: black;
   }
   input[type=range]::-ms-fill-upper {
-    background: var(--secondary-color);
-    border: 0.2px solid var(--secondary-color);
+    background: black;
+    border: 0.2px solid black;
     border-radius: 2.6px;
-    box-shadow: 1px 1px 1px var(--secondary-color), 0px 0px 1px var(--secondary-color);
+    box-shadow: 1px 1px 1px gray, 0px 0px 1px gray;
   }
   input[type=range]:focus::-ms-fill-upper {
     background: var(--secondary-color);
   }
 
+  textarea::-webkit-input-placeholder {
+    font-family: 'HelveticaNeueLTStd-Cn';
+    font-size: 16px;
+  }
+
 /*=================== // body // ====================*/
 .header {
     margin-bottom: 10px;
-    font-weight: 500;
+    font-weight: 700;
     text-align: center;
     font-family: 'HelveticaNeueLTStd-Cn';
     font-size: 30px;
     color: #1e1e1e;
-    font-weight: 500;
 }
 .header2 {
     margin-bottom: 40px;
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
     font-family: 'HelveticaNeueLTStd-Cn';
     font-size: 18px;
     color: #1e1e1e;
-    font-weight: 500;
 }
 .form-container {
     width: 52%;
@@ -465,22 +466,21 @@ progress[value]::-webkit-progress-value {
     text-decoration: none !important;
 }
 .btn1 {
-    background-color: #edbfff;
+    background-color: #000;
     padding: 6px 30px;
     font-family: 'HelveticaNeueLTStd-Cn';
     font-size: 15pt !important;
-    color: #000 !important;
+    color: #fff !important;
     display: inline-block;
     text-decoration: none !important;
     margin-top: 20px;
-    border: 2px solid #edbfff;
     border-radius: 6px;
     margin: 0 auto;
     display: table;
     cursor: pointer;
 }
 .btn1:hover {
-    background-color: #d86cff;
+  color: #ffff4f!important;
 }
 
 .buttons-row {
@@ -760,7 +760,12 @@ pre {
     justify-content: space-between;
 }
 
+.slider-range h4 {
+  margin-top: 20px;
+}
+
 .slider-parent {
+  position: relative;
     width: 100%;
 }
 
@@ -779,4 +784,32 @@ pre {
   height: 20px;
   font-size: 12px;
   transition: all 2s ease-in-out;
+}
+
+.duration-slider {
+  top: 0;
+  position: absolute;
+  margin-bottom: 30px;
+}
+
+.flag-holder {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flag-box {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+}
+
+.flag {
+  width: 250px;
+  margin-inline: 60px;
+  height: 100px;
+  border-radius: 20px;
+  cursor: pointer;
 }
