--- a/src/css/Responsive.css
+++ b/src/css/Responsive.css
@@ -230,6 +230,23 @@
 .answer-box-rgt ul li a{
 	padding: 5px 30px;
 }
+.flag-holder {
+	margin-top: 15px;
+  }
+  
+  .flag-box {
+	width: 30%;
+	display: flex;
+	justify-content: center;
+  }
+  
+  .flag {
+	width: 250px;
+	margin-inline: 60px;
+	height: 100px;
+	border-radius: 20px;
+	cursor: pointer;
+  }
 }
 @media only screen  and (max-width: 360px) {
 	.card-box {
