--- a/src/css/App.css
+++ b/src/css/App.css
@@ -108,6 +108,10 @@ progress[value]::-webkit-progress-value {
         background: -webkit-linear-gradient(135deg , #ffff4f 0%, #ffff4f 100%);
         background: linear-gradient(135deg , #ffff4f 0%, #ffff4f 100%);
   }
+
+  progress[value]::-moz-progress-bar {
+    background: -moz-linear-gradient(135deg , #ffff4f 0%, #ffff4f 100%);
+  }
   @-webkit-keyframes animate-stripes {
     100% { background-position: -100px 0px; }
  }
@@ -558,8 +562,8 @@ progress[value]::-webkit-progress-value {
 
 span {
    color: #5e5e5e;
-   font-family: monospace;
-   white-space: nowrap;
+   font-family: 'HelveticaNeueLTStd-Cn';
+   font-weight: 400;
 }
 
 span:after {
@@ -623,13 +627,13 @@ pre {
     left: 50%;
     opacity: 0;
     position: absolute;
-    z-index: -100;
+    z-index: -1000;
 }
 
-.tool:hover::before,
-.tool:focus::before,
-.tool:hover::after,
-.tool:focus::after {
+.more-info:hover .tool::before,
+.more-info:focus .tool::before,
+.more-info:hover .tool::after,
+.more-info:focus .tool::after {
     opacity: 1;
     transform: scale(1) translateY(0);
     z-index: 100; 
@@ -648,8 +652,8 @@ pre {
     transform:  scale(.6) translateY(-90%);
 }  */
 
-.tool:hover::before,
-.tool:focus::before {
+.more-info:hover .tool::before,
+.more-info:focus .tool::before {
     transition: all .65s cubic-bezier(.84,-0.18,.31,1.26) .2s;
 }
 
@@ -668,8 +672,8 @@ pre {
     width: 17.5em;
 }
 
-.tool:hover::after,
-.tool:focus::after  {
+.more-info:hover .tool::after,
+.more-info:focus .tool::after  {
     transition: all .65s cubic-bezier(.84,-0.18,.31,1.26);
 }
 
@@ -782,6 +786,8 @@ pre {
   height: 100px;
   padding: 6px 10px;
   border: 2px solid #5e5e5e;
+  font-family: 'HelveticaNeueLTStd-Cn';
+  font-size: 16px;
   border-radius: 5px;
   resize: none;
 }
@@ -817,7 +823,6 @@ pre {
   width: 250px;
   margin-inline: 60px;
   height: 100px;
-  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -829,3 +834,34 @@ pre {
   text-align: center;
   margin-bottom: 30px;
 }
+
+.tooltip-ex { /* Container for our tooltip */
+  position: relative; 
+  display: inline-block;
+ }
+ 
+ .tooltip-ex .tooltip-ex-text { /* This is for the tooltip text */
+  visibility: hidden;
+  width: 150px;
+  height: fit-content;
+  background-color: rgb(39, 39, 39);
+  color: white;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 10px; /* This defines tooltip text position */
+  position: absolute;
+  z-index: 1;
+  left: 100%;
+  top: 0;
+  margin-left: 10px;
+ }
+ 
+ .tooltip-ex:hover .tooltip-ex-text { /* Makes tooltip text visible when text is hovered on */
+  visibility: visible;
+ }
+
+ .more-info {
+   margin-top: 1.5px;
+   margin-right: 2px;
+   cursor: help;
+ }
