--- a/src/css/App.css
+++ b/src/css/App.css
@@ -222,7 +222,7 @@ progress[value]::-webkit-progress-value {
     box-shadow: 1px 1px 1px gray, 0px 0px 1px gray;
   }
   input[type=range]:focus::-ms-fill-upper {
-    background: var(--secondary-color);
+    background: #ffff4f;
   }
 
   textarea::-webkit-input-placeholder {
@@ -300,7 +300,7 @@ progress[value]::-webkit-progress-value {
 	font-size: 50px;
 }
 .card:hover {
-	background-color: #edbfff;
+	background-color: #ffff4f;
 }
 .card:hover i {
 	color: #fff;
@@ -747,7 +747,14 @@ pre {
 
 .grid-selection {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-rows: repeat(6, 1fr);
+    grid-auto-flow: column;
+}
+
+.feature-selection {
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+  grid-auto-flow: column;
 }
 
 .form-2 {
